General dropdown styles; markup updates for dashboard and profile

--- a/lms/templates/main.html
+++ b/lms/templates/main.html
@@ -167,6 +167,8 @@
   % endif
 
   <%block name="js_extra"/>
+
+  <script type="text/javascript" src="${settings.STATIC_URL}js/utils/dropdown.js"></script>
 </body>
 </html>
 
