--- a/cms/static/sass/elements/_xblocks.scss
+++ b/cms/static/sass/elements/_xblocks.scss
@@ -108,12 +108,12 @@
     text-align: $bi-app-right;
     border-top: 1px solid $gray-l3;
     margin: 0 15px;
-    padding: $(baseline/4);
+    padding: ($baseline/4);
     font-size: 80%;
-    color: $gray-l3;
+    color: $gray;
 
     a {
-      color: $gray-l3;
+      color: $gray;
 
       &:hover {
         color: $ui-link-color;
