--- a/lms/templates/main_django.html
+++ b/lms/templates/main_django.html
@@ -27,7 +27,7 @@
   <meta name="path_prefix" content="{{EDX_ROOT_URL}}">
 </head>
 
-<body class="{% block bodyclass %}{% endblock %} lang_{{LANGUAGE_CODE}}">
+<body class="{% block bodyclass %}{% endblock %} lang_{{LANGUAGE_CODE}}" data-updated="main_django.html">
   <a class="nav-skip" href="{% block nav_skip %}#content{% endblock %}">{% trans "Skip to main content" %}</a>
   {% with course=request.course %}
     {% if IS_EDX_DOMAIN %}
@@ -42,8 +42,10 @@
   </div>
   {% if IS_REQUEST_IN_MICROSITE %}
   {# For now we don't support overriden Django templates in microsites. Leave footer blank for now which is better than saying Edx.#}
-  {% elif IS_EDX_DOMAIN %}
-    {% include "footer-edx-new.html" %}
+  {% elif IS_EDX_DOMAIN and not ENABLE_FOOTER_V3 %}
+    {% include "footer-edx-v3.html" %}
+  {% elif IS_EDX_DOMAIN and ENABLE_FOOTER_V3 %}
+    {% include "footer-edx-v3.html" %}
   {% else %}
     {% include "footer.html" %}
   {% endif %}
