--- a/lms/templates/main.html
+++ b/lms/templates/main.html
@@ -135,7 +135,7 @@
 
 </head>
 
-<body class="${dir_rtl} <%block name='bodyclass'/> lang_${LANGUAGE_CODE}" data-updated="main.html">
+<body class="${dir_rtl} <%block name='bodyclass'/> lang_${LANGUAGE_CODE}">
   <div class="window-wrap" dir="${dir_rtl}">
     <a class="nav-skip" href="<%block name="nav_skip">#content</%block>">${_("Skip to main content")}</a>
 
