--- a/lms/static/sass/_build-lms.scss
+++ b/lms/static/sass/_build-lms.scss
@@ -21,6 +21,7 @@
 @import 'shared/fields';
 @import 'shared/forms';
 @import 'shared/footer';
+@import 'shared/footer-v3'; // replaces footer partial once feature flag removed
 @import 'shared/header';
 @import 'shared/course_object';
 @import 'shared/course_filter';
