--- a/lms/templates/footer-edx-v3.html
+++ b/lms/templates/footer-edx-v3.html
@@ -13,9 +13,9 @@
     <div class="site-details">
         <nav class="site-nav" aria-label="About edX">
             <a href="${marketing_link('ABOUT')}">${_("About")}</a>
-            <a href="${marketing_link('FAQ')}">${_("FAQs")}</a>
-            <a href="${marketing_link('NEWS')}">${_("News")}</a>
             <a href="${marketing_link('BLOG')}">${_("Blog")}</a>
+            <a href="${marketing_link('NEWS')}">${_("News")}</a>
+            <a href="${marketing_link('FAQ')}">${_("FAQs")}</a>
             <a href="${marketing_link('CONTACT')}">${_("Contact")}</a>
             <a href="${marketing_link('JOBS')}">${_("Jobs")}</a>
             <a href="${marketing_link('DONATE')}">${_("Donate")}</a>
@@ -43,7 +43,7 @@
           ## Translators: This is the website name of www.facebook.com. Please
           ## translate this the way that Facebook advertises in your language.
           <a href="${settings.SOCIAL_MEDIA_FOOTER_URLS.get('facebook', '#')}" class="sm-link external" title="${_("Facebook")}" rel="noreferrer">
-            <span class="icon fa fa-facebook element-invisible"></span>
+            <span class="icon fa fa-facebook-square element-invisible"></span>
           </a>
 
           ## Translators: This is the website name of www.twitter.com. Please
@@ -55,7 +55,7 @@
           ## Translators: This is the website name of www.linked.com. Please
           ## translate this the way that LinkedIn advertises in your language.
           <a href="${settings.SOCIAL_MEDIA_FOOTER_URLS.get('linkedin', '#')}" class="sm-link external" title="${_("LinkedIn")}" rel="noreferrer">
-            <span class="icon fa fa-linkedin element-invisible"></span>
+            <span class="icon fa fa-linkedin-square element-invisible"></span>
           </a>
 
           ## Translators: This is the website name of plus.google.com. Please
